<resources>
    <string name="app_name">WordsApp_CaseStudy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="meaning">Meaning</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="add_new">Add New</string>
    <string name="empty_words">You have no word yet</string>
    <string name="word_details">Word Details</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="synonym">Synonym</string>
    <string name="details">Details</string>
    <string name="unmark">Unmark</string>
    <string name="no_completed_words_yet">No completed words yet</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_want_to_delete_this_word_action_cannot_be_undone">You want to delete this word? Action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_move_this_word_to_completed_list">Do you want to move this word to completed list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_order">Sort order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_by">Sort By</string>
    <string name="date">Date</string>

</resources>