<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/xxl"
    tools:context=".ui.manage.popup.SortPopFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:textSize="@dimen/tx_xxxxl"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/rgSortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <RadioButton
            android:id="@+id/rbAscend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:textSize="@dimen/tx_xxxl"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/rbDescend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            android:textSize="@dimen/tx_xxxl"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </RadioGroup>
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/xxxl"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="@dimen/tx_xxxxl"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/rgSortBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <RadioButton
            android:id="@+id/rbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/tx_xxxl"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/rbDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/tx_xxxl"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/xxxl"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:cornerRadius="@dimen/m"
        android:textSize="@dimen/tx_xxxl"
        android:paddingVertical="@dimen/m"
        android:paddingHorizontal="@dimen/xxxxxl"
        app:backgroundTint="@color/blue"/>

</LinearLayout>