<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/xxl"
    tools:context=".ui.manage.popup.CompletePopFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="@dimen/tx_xxxxl"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tx_xxxl"
        android:text="@string/do_you_want_to_move_this_word_to_completed_list"/>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/xxxl"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            app:cornerRadius="@dimen/s"
            android:textSize="@dimen/tx_xl"
            android:layout_marginEnd="@dimen/xxxl"
            app:backgroundTint="@color/blue"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            app:cornerRadius="@dimen/s"
            android:textSize="@dimen/tx_xl"
            app:backgroundTint="@color/blue"/>
    </LinearLayout>

</LinearLayout>