<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.team.wordsapp_casestudy.ui.manage.base.BaseManageWordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ui.manage.base.BaseManageWordFragment">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxxxxl"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/xl"
            android:text="@string/add_new"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.TitleLarge" />
            <LinearLayout
                android:id="@+id/bgBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/xl"
                android:paddingEnd="@dimen/xl">

                <!-- Title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:paddingTop="@dimen/xl"
                    style="@style/TextAppearance.Material3.TitleSmall"/>

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxl"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/title"
                    android:padding="@dimen/m"
                    android:layout_marginTop="@dimen/xs"
                    android:text='@={viewModel.title}'
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:maxLength="45"/>

                <!-- Meaning -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meaning"
                    android:layout_marginTop="@dimen/xl"
                    style="@style/TextAppearance.Material3.TitleSmall"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxxl"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top|start"
                    android:maxLines="10"
                    android:hint="@string/meaning"
                    android:padding="@dimen/m"
                    android:layout_marginTop="@dimen/xs"
                    android:text='@={viewModel.meaning}'
                    style="@style/TextAppearance.Material3.TitleLarge" />

                <TextView
                    style="@style/TextAppearance.Material3.TitleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xl"
                    android:text="@string/synonym" />

                <!-- Details -->
                <EditText
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxxl"
                    android:layout_marginTop="@dimen/xs"
                    android:background="@drawable/edit_text_bg"
                    android:gravity="top|start"
                    android:hint="@string/synonym"
                    android:maxLines="10"
                    android:padding="@dimen/m"
                    android:text='@={viewModel.synomyn}' />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:layout_marginTop="@dimen/xl"
                    android:layout_marginBottom="@dimen/xxxs"
                    style="@style/TextAppearance.Material3.TitleSmall"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xxxxxxxxl"
                    android:maxLines="10"
                    android:gravity="top|start"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/details"
                    android:padding="@dimen/m"
                    android:layout_marginTop="@dimen/xs"
                    android:inputType="textMultiLine"
                    android:text='@={viewModel.detail}'
                    style="@style/TextAppearance.Material3.TitleLarge" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/xl" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/xl"
            android:paddingEnd="@dimen/xl"
            android:paddingBottom="@dimen/xl">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/blue"
                android:layout_marginTop="@dimen/xl"
                app:cornerRadius="@dimen/s"
                android:onClick='@{() -> viewModel.submit()}'
                android:text="@string/add_new" />
        </LinearLayout>
    </LinearLayout>
</layout>
