<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/xxl">

        <!-- Search and sort -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/xs">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="@dimen/xs"
                android:hint="@string/search"
                android:padding="@dimen/xs" />

            <ImageButton
                android:id="@+id/btnSort"
                android:layout_width="@dimen/xxxl"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xs"
                android:src="@drawable/ic_sort"
                android:padding="@dimen/xxs"
                app:tint="?attr/colorOnSurface" />
        </LinearLayout>

        <!-- Content -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/xs"
                android:paddingBottom="@dimen/xxxxl"
                android:clipToPadding="false" />

            <LinearLayout
                android:id="@+id/llEmpty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/xl">

                <ImageView
                    android:layout_width="@dimen/xxxxl"
                    android:layout_height="@dimen/xxxxl"
                    android:src="@drawable/ic_text"
                    android:layout_marginBottom="@dimen/xs"
                    app:tint="?attr/colorOutline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_words"
                    style="@style/TextAppearance.Material3.TitleSmall"/>
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <!--  Add   -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/xl"
        android:layout_marginBottom="@dimen/xxl"
        android:text="@string/add_new"
        android:textColor="@color/white"
        app:icon="@drawable/ic_add"
        android:backgroundTint="@color/blue"
        app:iconTint="?attr/colorOnPrimary" />

</FrameLayout>
